# a2a-rs

./: Cargo.toml
.docs/architecture/260212_a2a-rs/: 00_overview.md  01_components.md  02_data-model.md  03_server-architecture.md  04_client-architecture.md
.docs/plans/: a2a-rs-implementation-plan.md
.docs/plans/260212_a2a-rs-impl/: 00_overview.md  01_workspace-setup.md  02_a2a-types.md  03_a2a-server.md  04_a2a-client.md  05_examples-and-tests.md
.docs/research/: a2a-protocol-analysis.md
.docs/research/a2a-go-sdk/: 00_overview.md  01_tech-stack.md  02_folder-architecture.md  03_v1-gap-analysis.md  04_sse-reconnection.md  05_github-status.md
crates/a2a-client/: Cargo.toml
crates/a2a-client/examples/: helloworld_client.rs
crates/a2a-client/src/: agent_card_resolver.rs  client.rs  error.rs  jsonrpc_transport.rs  lib.rs  sse.rs  transport.rs
crates/a2a-integration-tests/: Cargo.toml
crates/a2a-integration-tests/tests/: integration_test.rs
crates/a2a-server/: Cargo.toml
crates/a2a-server/examples/: helloworld_server.rs
crates/a2a-server/src/: agent_card_serve.rs  agent_executor.rs  error.rs  event_queue.rs  handler.rs  jsonrpc_handler.rs  lib.rs  middleware.rs  router.rs  sse_writer.rs  task_store.rs
crates/a2a-types/: Cargo.toml
crates/a2a-types/src/: agent_card.rs  artifact.rs  auth.rs  error.rs  event.rs  jsonrpc.rs  lib.rs  message.rs  part.rs  push.rs  task.rs
