[package]
name = "a2a-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2A Protocol v1.0 Client SDK - reqwest-based JSON-RPC + SSE"

[dependencies]
a2a-types.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true

[[example]]
name = "helloworld-client"
path = "examples/helloworld_client.rs"
