[package]
name = "a2a-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2A Protocol v1.0 Server SDK - axum-based JSON-RPC + SSE"

[dependencies]
a2a-types.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[example]]
name = "helloworld-server"
path = "examples/helloworld_server.rs"
