[package]
name = "a2a-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types for the A2A (Agent2Agent) Protocol v1.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
